[package]
name = "mst"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An implementation of ATProto's Merkle Search Tree"
homepage = "https://github.com/hdevalence/mst"
repository = "https://github.com/hdevalence/mst"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1" , features = ["derive"] }
serde_cbor = "0.11"
rocksdb = "0.20"
sha2 = "0.10"
tracing = "0.1"
cid = { version = "0.10.1", features = ["serde"] }
anyhow = "1"
hex = "0.4.3"
serde_bytes = "0.11.9"
minicbor = { version = "0.19.1", features = ["half", "std"]}
ciborium = "0.2"

[dev-dependencies]
proptest = "1"
tracing-subscriber = "0.3"
